# Eden

./: Cargo.toml  LICENSE  makefile  readme.md
assets/: bush1.glb  mango.glb  potatoe.glb  tree0.glb  tree1.glb  whale.glb
assets/models/trees/: bush0.glb  bush2.glb
markdown/: gdd.md  index.md  saptamana_1.md  saptamana_2.md  saptamana_3.md  saptamana_4.md
src/: input.rs  main.rs  resource.rs  save.rs  terrain.rs
src/player/: controller.rs  controller.rs.bak.rs  input.rs  mod.rs  playerx.rs  structures.rs
src/player_controller/: controller.rs  look.rs  mod.rs
src/ui/: mod.rs
src/whale/: mod.rs
src/world/: mod.rs  plants.rs  sun.rs  terrain.rs
