[package]
name = "eden"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6.0", features = ["dynamic"] }
bevy_rapier3d = { version = "*", features = [ "simd-stable", "render" ] }
rapier3d = "*"
bevy_flycam = "*"
noise = "0.7.0"
rand = "0.7.3"
